Fixed Issue With Editing A Shift

--- a/EmployeeScheduler/src/app/shifts/editShift/editShift.component.css
+++ b/EmployeeScheduler/src/app/shifts/editShift/editShift.component.css
@@ -4,6 +4,7 @@
 }
 
 .button {
+    width: 496px;
     background-color: var(--success-color);
 }
 
